# meshdevices

./: .gitignore  PROMPT.md  README.md  TODO.md  client.toml  pyproject.toml  server.toml
docs/: README.md  demo-lm-chat.md  iroh-vs-libp2p-decision.md  motivation.md  mvp.md  network-test.md  overview.md  py-libp2p-iroh-rebuild-scope.md  study-resources.md
docs/technical/: README.md  iroh.md  libp2p-iroh-bridge.md  py-libp2p.md
examples/: allowlist.example.toml  client.local.example.toml  server.local.example.toml
scripts/: demo-lm-chat.sh  dummy_lm_studio.py  mesh-pair-stop.sh  mesh-pair.sh  mesh-tail.sh  network-test-phase1.sh  setup.sh  test-lm-chat-dummy.sh  test-lm-chat.sh
src/meshdevices/: __init__.py  __main__.py  allowlist.py  cli.py  config.py  gossip_allowlist.py  identity.py  identity_store.py  iroh_loop.py  lm_chat_client.py  lm_proxy.py  node.py  swarm_builder.py
src/meshdevices/transport/: __init__.py  bistream_adapter.py  iroh_transport.py
tests/: test_allowlist.py  test_cli_smoke.py  test_identity_store.py  test_lm_chat_model.py  test_lm_proxy_network_regression.py  test_peer_id_cli.py
